text positioning and card sizing

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
   <div class="qr-card">
   <img src="images/image-qr-code.png" alt="QR code">
 
-
+    <div class="qr-text">
   <h1>Improve your front-end skills by building projects</h1>
 
   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
 </div>
   
   <div class="attribution">
